--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,6 @@
   HUGO_VERSION = "0.59.0"
   HUGO_ENV = "production"
   HUGO_ENABLEGITINFO = "true"
+
+[context.branch-deploy.environment]
+  HUGO_VERSION = "0.59.0"
