--- a/config.toml
+++ b/config.toml
@@ -283,24 +283,29 @@ enableGitInfo = false
   weight = 3
 
 [[menu.main]]
+  name = "Grants"
+  url = "#grants"
+  weight = 4
+
+[[menu.main]]
   name = "Posts"
   url = "#posts"
-  weight = 4
+  weight = 5
 
 [[menu.main]]
   name = "Projects"
   url = "#projects"
-  weight = 5
+  weight = 6
 
 [[menu.main]]
   name = "Teaching"
   url = "#teaching"
-  weight = 6
+  weight = 7
 
 [[menu.main]]
   name = "Contact"
   url = "#contact"
-  weight = 7
+  weight = 8
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
