--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,19 +9,24 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
+  name = "Peer Reviews"
+  url = "#peer_reviews"
   weight = 20
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 30
+  name = "Grants"
+  url = "#grants"
+  weight = 22
 
 [[main]]
   name = "Publications"
   url = "#featured"
   weight = 40
+
+[[main]]
+  name = "Teaching"
+  url = "#teaching"
+  weight = 50
 
 [[main]]
   name = "Contact"
